--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,35 @@
-# FastAPI and web framework dependencies
-fastapi>=0.100.0,<0.105.0
-uvicorn[standard]>=0.20.0,<0.25.0
-python-multipart>=0.0.6
-
-# Database dependencies
-sqlalchemy>=2.0.0,<2.1.0
-pymysql>=1.0.0,<2.0.0
-
-# Data processing (use compatible versions with pre-built wheels)
-pandas>=2.0.0,<2.2.0
-numpy>=1.24.0,<1.26.0
-
-# HTTP client
-httpx>=0.24.0,<0.26.0
-
-# Email validation
-email-validator>=2.0.0
-
-# Environment and configuration
-python-dotenv>=1.0.0
-
-# File handling
-openpyxl>=3.0.0
+aiosmtplib==4.0.1
+annotated-types==0.7.0
+anyio==4.9.0
+APScheduler==3.11.0
+certifi==2025.8.3
+cffi==1.17.1
+click==8.2.1
+cryptography==45.0.5
+dnspython==2.8.0
+email-validator==2.3.0
+et_xmlfile==2.0.0
+fastapi==0.116.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+numpy==2.3.2
+openpyxl==3.1.5
+pandas==2.3.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.42
+starlette==0.47.2
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+tzlocal==5.3.1
+uvicorn==0.35.0
