--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ idna==3.10
 numpy==2.3.2
 openpyxl==3.1.5
 pandas==2.3.1
+psycopg==3.2.12
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
