--- a/requirements.txt
+++ b/requirements.txt
@@ -14,14 +14,19 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.3.0
 numpy==2.3.2
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.1
+pluggy==1.6.0
 psycopg==3.2.12
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyMySQL==1.1.1
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
